removed console.log and fix progressbar width on mobile in Steps in HeroApplication Form

--- a/next/src/components/_global/HeroApplication/HeroApplication.module.scss
+++ b/next/src/components/_global/HeroApplication/HeroApplication.module.scss
@@ -101,8 +101,8 @@
     z-index: -1;
     position: absolute;
     top: 32px;
-    left: 56px;
-    right: 56px;
+    left: 38px;
+    right: 38px;
     height: 2px;
     background-color: var(--neutral-300);
     div {
